--- a/src/app/avaliation/CardioPulmunar/teste-banco/teste-banco.component.html
+++ b/src/app/avaliation/CardioPulmunar/teste-banco/teste-banco.component.html
@@ -1,10 +1,8 @@
 <div class="container">
-    <div class="header">
-        <h1 i18n>Testes de Banco</h1>
-    </div>
-
+    <app-header-name></app-header-name>
 
     <div class="section">
+        <h1 class="h1-title" i18n>Testes de Banco</h1>
         <div class="section-cards">
             <mat-card>
                 <mat-card-header [routerLink]="['/banco']">
@@ -17,11 +15,5 @@
                 </mat-card-header>
             </mat-card>
         </div>
-    </div>
-
-    <div class="footer">
-        <a mat-mini-fab color="primary" (click)="goBack()">
-            <mat-icon>undo</mat-icon>
-        </a>
     </div>
 </div>
