--- a/src/app/avaliation/CardioPulmunar/teste-caminhada/teste-caminhada.component.html
+++ b/src/app/avaliation/CardioPulmunar/teste-caminhada/teste-caminhada.component.html
@@ -1,10 +1,7 @@
 <div class="container">
-    <div class="header">
-        <h1 i18n>Testes de Caminhada</h1>
-    </div>
-
-
+    <app-header-name></app-header-name>
     <div class="section">
+        <h1 class="h1-title" i18n>Testes de Caminhada</h1>
         <div class="section-cards">
             <mat-card>
                 <mat-card-header [routerLink]="['/rock']">
@@ -26,9 +23,5 @@
 
 
     </div>
-    <div class="footer">
-        <a mat-mini-fab color="primary" (click)="goBack()">
-            <mat-icon>undo</mat-icon>
-        </a>
-    </div>
+
 </div>
