--- a/src/app/avaliation/composicao-corporal/balanca/balanca.component.html
+++ b/src/app/avaliation/composicao-corporal/balanca/balanca.component.html
@@ -1,8 +1,7 @@
 <div class="container">
-    <div class="header">
-        <h3>Bio Impedância - Balança</h3>
-    </div>
+    <app-header-name></app-header-name>
     <div class="section">
+        <h1 class="h1-title" i18n>Bio Impedância - Balança</h1>
         <form #f="ngForm" (submit)="save(f.value)">
             <input type="hidden" name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura">
             <table>
@@ -203,12 +202,6 @@
                                 type="number">
                         </td>
                     </tr>
-<!--                     <tr>
-                        <th><span>Classificação</span></th>
-                        <td *ngIf="pointer>=1">TO DO</td>
-                        <td *ngIf="pointer>=0">TO DO</td>
-                        <td *ngIf="addEval">&nbsp;</td>
-                    </tr> -->
                 </tbody>
             </table>
 
@@ -217,33 +210,27 @@
                     (click)="pointer=pointer-1">
                     <mat-icon class="mat-14">chevron_left</mat-icon>
                 </button>
-                <button type="button" *ngIf="!addEval" mat-fab (click)="addEvaluation()">
+                <button type="button" *ngIf="!addEval" mat-stroked-button (click)="addEvaluation()">
                     <mat-icon class="mat-18">add</mat-icon>
                 </button>
                 <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1"
                     mat-mini-fab color="default" (click)="pointer=pointer+1">
                     <mat-icon class="mat-14">chevron_right</mat-icon>
                 </button>
-                <button type="button" *ngIf="addEval" mat-fab color="default" (click)="closeInput()">
+                <button type="button" *ngIf="addEval" mat-stroked-button color="default" (click)="closeInput()">
                     <mat-icon class="mat-18">close</mat-icon>
                 </button>
-                <button *ngIf="addEval" mat-fab>
+                <button *ngIf="addEval" mat-stroked-button>
                     <mat-icon class="mat-18">check</mat-icon>
                 </button>
             </div>
         </form>
  
-        <div class="graphics">
+<!--         <div class="graphics">
             <ngx-charts-pie-chart i18n [view]="view" [scheme]="colorScheme" [results]="chartValues" [gradient]="gradient"
                 [legend]="showLegend" [legendPosition]="legendPosition" [labels]="showLabels" [doughnut]="isDoughnut"
                 >
             </ngx-charts-pie-chart>
-        </div>
-    </div>
-
-    <div class="footer">
-        <a mat-mini-fab color="primary" (click)="goBack()">
-            <mat-icon>undo</mat-icon>
-        </a>
+        </div> -->
     </div>
 </div>
