--- a/src/app/avaliation/composicao-corporal/balanca/balanca.component.scss
+++ b/src/app/avaliation/composicao-corporal/balanca/balanca.component.scss
@@ -1,33 +1,60 @@
-  .section {
-    flex-direction: column;
-    justify-content: start;
-    
-    table {
-      width: 100%;
-    }
-    th,
-    td {
-      height: 28px;
-      // background-color: blanchedalmond;
-      border-bottom: 1px #999 solid;
-      text-align: center;
-    }
-    th {
-      font-weight: 500 !important;
-      text-align: left;
-      padding-left: 5px;
-    }
-    .th-top {
-      text-align: center;
-    }
-    td > input {
-      width: 60px;
-    }
+.container {
+  background-color: white;
+  background-image: unset;
+}
+
+.section {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+
+  .h1-title {
+    width: 100%;
+    height: 30px;
+    font-size: 20px;
+    margin-top: 10px !important;
   }
-  
-  .form-subtitle{
-    text-align: start;
-    font-size: small;
-    color: blue;
+  form {
+    width: 100% !important;
   }
 
+  table {
+    width: 100%;
+  }
+  th,
+  td {
+    height: 28px;
+    // background-color: blanchedalmond;
+    border-bottom: 1px #999 solid;
+    text-align: center;
+  }
+  th {
+    font-weight: 500 !important;
+    text-align: left;
+    padding-left: 5px;
+  }
+  .th-top {
+    text-align: center;
+  }
+  td > input {
+    width: 60px;
+  }
+}
+
+.form-subtitle {
+  text-align: start;
+  font-size: small;
+  color: blue;
+}
+
+@media only screen and (min-width: 768px) {
+  .section {
+    width: 100%;
+    form {
+      width: 90% !important;
+      margin: auto;
+    }
+  }
+}
