--- a/src/app/avaliation/flexibilidade/flexiteste/flexiteste.component.html
+++ b/src/app/avaliation/flexibilidade/flexiteste/flexiteste.component.html
@@ -1,10 +1,8 @@
 <div class="container">
-    <div class="header">
-        <h1 i18n="Title">Flexiteste</h1>
-    </div>
-
+    <app-header-name></app-header-name>
 
     <div class="section">
+        <h1 class="h1-title" i18n="Title">Flexiteste</h1>
         <mat-tab-group [disableRipple]="false" [(selectedIndex)]="selectedTab">
 
             <mat-tab i18n label="Punho">
@@ -121,17 +119,17 @@
                             (click)="pointer=pointer-1">
                             <mat-icon class="mat-14">chevron_left</mat-icon>
                         </button>
-                        <button type="button" *ngIf="!addEval" mat-fab (click)="addEvaluation()">
+                        <button type="button" *ngIf="!addEval" mat-stroked-button (click)="addEvaluation()">
                             <mat-icon class="mat-18">add</mat-icon>
                         </button>
                         <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1" mat-mini-fab
                             color="default" (click)="pointer=pointer+1">
                             <mat-icon class="mat-14">chevron_right</mat-icon>
                         </button>
-                        <button type="button" *ngIf="addEval" mat-fab color="default" (click)="closeInput()">
+                        <button type="button" *ngIf="addEval" mat-stroked-button color="default" (click)="closeInput()">
                             <mat-icon class="mat-18">close</mat-icon>
                         </button>
-                        <button *ngIf="addEval" mat-fab>
+                        <button *ngIf="addEval" mat-stroked-button>
                             <mat-icon class="mat-18">check</mat-icon>
                         </button>
                     </div>
@@ -252,17 +250,17 @@
                             (click)="pointer=pointer-1">
                             <mat-icon class="mat-14">chevron_left</mat-icon>
                         </button>
-                        <button type="button" *ngIf="!addEval" mat-fab (click)="addEvaluation()">
+                        <button type="button" *ngIf="!addEval" mat-stroked-button (click)="addEvaluation()">
                             <mat-icon class="mat-18">add</mat-icon>
                         </button>
                         <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1"
                             mat-mini-fab color="default" (click)="pointer=pointer+1">
                             <mat-icon class="mat-14">chevron_right</mat-icon>
                         </button>
-                        <button type="button" *ngIf="addEval" mat-fab color="default" (click)="closeInput()">
+                        <button type="button" *ngIf="addEval" mat-stroked-button color="default" (click)="closeInput()">
                             <mat-icon class="mat-18">close</mat-icon>
                         </button>
-                        <button *ngIf="addEval" mat-fab>
+                        <button *ngIf="addEval" mat-stroked-button>
                             <mat-icon class="mat-18">check</mat-icon>
                         </button>
                     </div>
@@ -359,17 +357,17 @@
                             (click)="pointer=pointer-1">
                             <mat-icon class="mat-14">chevron_left</mat-icon>
                         </button>
-                        <button type="button" *ngIf="!addEval" mat-fab (click)="addEvaluation()">
+                        <button type="button" *ngIf="!addEval" mat-stroked-button (click)="addEvaluation()">
                             <mat-icon class="mat-18">add</mat-icon>
                         </button>
                         <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1"
                             mat-mini-fab color="default" (click)="pointer=pointer+1">
                             <mat-icon class="mat-14">chevron_right</mat-icon>
                         </button>
-                        <button type="button" *ngIf="addEval" mat-fab color="default" (click)="closeInput()">
+                        <button type="button" *ngIf="addEval" mat-stroked-button color="default" (click)="closeInput()">
                             <mat-icon class="mat-18">close</mat-icon>
                         </button>
-                        <button *ngIf="addEval" mat-fab>
+                        <button *ngIf="addEval" mat-stroked-button>
                             <mat-icon class="mat-18">check</mat-icon>
                         </button>
                     </div>
@@ -479,17 +477,17 @@
                             (click)="pointer=pointer-1">
                             <mat-icon class="mat-14">chevron_left</mat-icon>
                         </button>
-                        <button type="button" *ngIf="!addEval" mat-fab (click)="addEvaluation()">
+                        <button type="button" *ngIf="!addEval" mat-stroked-button (click)="addEvaluation()">
                             <mat-icon class="mat-18">add</mat-icon>
                         </button>
                         <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1"
                             mat-mini-fab color="default" (click)="pointer=pointer+1">
                             <mat-icon class="mat-14">chevron_right</mat-icon>
                         </button>
-                        <button type="button" *ngIf="addEval" mat-fab color="default" (click)="closeInput()">
+                        <button type="button" *ngIf="addEval" mat-stroked-button color="default" (click)="closeInput()">
                             <mat-icon class="mat-18">close</mat-icon>
                         </button>
-                        <button *ngIf="addEval" mat-fab>
+                        <button *ngIf="addEval" mat-stroked-button>
                             <mat-icon class="mat-18">check</mat-icon>
                         </button>
                     </div>
@@ -697,17 +695,17 @@
                             (click)="pointer=pointer-1">
                             <mat-icon class="mat-14">chevron_left</mat-icon>
                         </button>
-                        <button type="button" *ngIf="!addEval" mat-fab (click)="addEvaluation()">
+                        <button type="button" *ngIf="!addEval" mat-stroked-button (click)="addEvaluation()">
                             <mat-icon class="mat-18">add</mat-icon>
                         </button>
                         <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1"
                             mat-mini-fab color="default" (click)="pointer=pointer+1">
                             <mat-icon class="mat-14">chevron_right</mat-icon>
                         </button>
-                        <button type="button" *ngIf="addEval" mat-fab color="default" (click)="closeInput()">
+                        <button type="button" *ngIf="addEval" mat-stroked-button color="default" (click)="closeInput()">
                             <mat-icon class="mat-18">close</mat-icon>
                         </button>
-                        <button *ngIf="addEval" mat-fab>
+                        <button *ngIf="addEval" mat-stroked-button>
                             <mat-icon class="mat-18">check</mat-icon>
                         </button>
                     </div>
@@ -828,17 +826,17 @@
                             (click)="pointer=pointer-1">
                             <mat-icon class="mat-14">chevron_left</mat-icon>
                         </button>
-                        <button type="button" *ngIf="!addEval" mat-fab (click)="addEvaluation()">
+                        <button type="button" *ngIf="!addEval" mat-stroked-button (click)="addEvaluation()">
                             <mat-icon class="mat-18">add</mat-icon>
                         </button>
                         <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1"
                             mat-mini-fab color="default" (click)="pointer=pointer+1">
                             <mat-icon class="mat-14">chevron_right</mat-icon>
                         </button>
-                        <button type="button" *ngIf="addEval" mat-fab color="default" (click)="closeInput()">
+                        <button type="button" *ngIf="addEval" mat-stroked-button color="default" (click)="closeInput()">
                             <mat-icon class="mat-18">close</mat-icon>
                         </button>
-                        <button *ngIf="addEval" mat-fab>
+                        <button *ngIf="addEval" mat-stroked-button>
                             <mat-icon class="mat-18">check</mat-icon>
                         </button>
                     </div>
@@ -957,17 +955,17 @@
                             (click)="pointer=pointer-1">
                             <mat-icon class="mat-14">chevron_left</mat-icon>
                         </button>
-                        <button type="button" *ngIf="!addEval" mat-fab (click)="addEvaluation()">
+                        <button type="button" *ngIf="!addEval" mat-stroked-button (click)="addEvaluation()">
                             <mat-icon class="mat-18">add</mat-icon>
                         </button>
                         <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1"
                             mat-mini-fab color="default" (click)="pointer=pointer+1">
                             <mat-icon class="mat-14">chevron_right</mat-icon>
                         </button>
-                        <button type="button" *ngIf="addEval" mat-fab color="default" (click)="closeInput()">
+                        <button type="button" *ngIf="addEval" mat-stroked-button color="default" (click)="closeInput()">
                             <mat-icon class="mat-18">close</mat-icon>
                         </button>
-                        <button *ngIf="addEval" mat-fab>
+                        <button *ngIf="addEval" mat-stroked-button>
                             <mat-icon class="mat-18">check</mat-icon>
                         </button>
                     </div>
@@ -1079,9 +1077,5 @@
             </mat-tab>
         </mat-tab-group>
     </div>
-    <div class="footer">
-        <button mat-mini-fab color="primary" (click)="goBack()">
-            <mat-icon>undo</mat-icon>
-        </button>
-    </div>
+
 </div>
