--- a/src/app/dashboard/configs/configs.component.scss
+++ b/src/app/dashboard/configs/configs.component.scss
@@ -1,3 +1,8 @@
+.container{
+    background-color: white;
+    background-image: unset;
+}
+
 .section{
     display: flex;
     flex-direction: row;
