--- a/src/app/prescription/pre-dash/pre-dash.component.html
+++ b/src/app/prescription/pre-dash/pre-dash.component.html
@@ -1,9 +1,8 @@
 <div class="container">
-    <div class="header">
-        <h1>Prescrições de Exercicios</h1>
-    </div>
+    <app-header-name></app-header-name>
 
     <div class="section">
+        <h1 class="h1-title" i18n>Prescrições de Exercicios</h1>
         <mat-accordion>
             <mat-expansion-panel class="accordion">
                 <mat-expansion-panel-header>
@@ -87,10 +86,5 @@
 
         </mat-accordion>
 
-    </div>
-    <div class="footer">
-        <a mat-mini-fab color="primary" routerLink="/dash">
-            <mat-icon>home</mat-icon>
-        </a>
     </div>
 </div>
