--- a/src/app/reports/rep-dash/rep-dash.component.html
+++ b/src/app/reports/rep-dash/rep-dash.component.html
@@ -1,15 +1,8 @@
 <div class="container">
-    <div class="header">
-        <h1>Relatorios e Estatisticas</h1>
-    </div>
+    <app-header-name></app-header-name>
 
     <div class="section">
-
-    </div>
-    <div class="footer">
-        <a mat-mini-fab color="primary" routerLink="/dash">
-            <mat-icon>home</mat-icon>
-        </a>
+    <h1 class="h1-title" i18n>Relatorios e Estatisticas</h1>
     </div>
     
 </div>
