--- a/src/app/avaliation/CardioPulmunar/banco/banco.component.scss
+++ b/src/app/avaliation/CardioPulmunar/banco/banco.component.scss
@@ -1,8 +1,37 @@
-.section{
+.container {
+  background-color: white;
+  background-image: unset;
+}
+.section {
+  width: 100%;
+  display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
+  align-items: center;
+
+  .h1-title {
+    width: 100%;
+    height: 30px;
+    font-size: 20px;
+    margin-top: 10px !important;
+  }
+
+  form {
+    width: 100%;
+  }
 }
 
 .metronomo-button{
   margin-left: 50px;
 }
+
+@media only screen and (min-width: 768px) {
+  form {
+    width: 90% !important;
+    margin: auto;
+  }
+}
+
+
+
+
