--- a/src/app/avaliation/CardioPulmunar/teste-bicicleta/teste-bicicleta.component.html
+++ b/src/app/avaliation/CardioPulmunar/teste-bicicleta/teste-bicicleta.component.html
@@ -1,10 +1,9 @@
 <div class="container">
-    <div class="header">
-        <h1 i18n>Testes de Bicicleta</h1>
-    </div>
+    <app-header-name></app-header-name>
 
 
     <div class="section">
+        <h1 class="h1-title" i18n>Testes de Bicicleta</h1>
         <div class="section-cards">
             <mat-card>
                 <mat-card-header [routerLink]="['/astryh']">
@@ -23,11 +22,6 @@
             </mat-card>
         </div>
 
+    </div>
 
-    </div>
-    <div class="footer">
-        <a mat-mini-fab color="primary" (click)="goBack()">
-            <mat-icon>undo</mat-icon>
-        </a>
-    </div>
 </div>
