--- a/src/app/avaliation/CardioPulmunar/teste-corrida/teste-corrida.component.scss
+++ b/src/app/avaliation/CardioPulmunar/teste-corrida/teste-corrida.component.scss
@@ -1,26 +1,43 @@
 .container {
+  background-color: rgb(11, 109, 116);
   background-image: url("./../../../../assets/img/aval_corrida.jpg");
   background-repeat: no-repeat;
-  background-blend-mode: normal;
+  background-blend-mode: luminosity;
   background-size: cover;
   background-position: center;
 }
-
 .section{
+  width: 100% !important;
+  display: flex;
   flex-direction: column;
-  justify-content: start;
+  justify-content: flex-start;
   align-items: center;
+
+
 }
 
 .section-cards{
-  width: 360px;
+  width: 100%;
   margin: auto;
 }
+
 .mat-card{
   height: 30px;
-  background-color: rgba(247, 238, 238, 0.704);
-  margin-bottom: 1px;
+  background-color:  rgba(119, 107, 107, 0.788);
+  margin-bottom: 3px;
+
+  .mat-card-subtitle{
+    font-size: 16px;
+    font-weight: unset;
+    color: white;
+  }
 }
 
-
+@media only screen and (min-width: 768px){
+  .section{
+    width: 425px !important;
+    margin: auto;
+  }
+}
+  
   
