--- a/src/app/avaliation/antropometria/mayhew-et-al/mayhew-et-al.component.html
+++ b/src/app/avaliation/antropometria/mayhew-et-al/mayhew-et-al.component.html
@@ -1,129 +1,120 @@
 <div class="container">
-    <div class="header">
-        <h3>Mayhew et al. (1983)</h3>
-    </div> 
+    <app-header-name></app-header-name>
     <div class="section">
-     <form #f="ngForm" (submit)="save(f.value)">
-        <input type="hidden"  name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura">
-        <input type="hidden"  name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso">
-        <input type="hidden"  name="idade" #idade="ngModel" [(ngModel)]="newEvaluation.idade">
-        <table class="section-table">
-            <thead>
-                <tr>
-                    <th>&nbsp;</th>
-                    <th class="th-top" *ngIf="pointer>=1">
-                        <button type="button" (click)="chartSelected='pie'; setEvaluation(evaluation[pointer-1])">
-                            {{evaluation[pointer-1].data | date:'dd/LL/yyyy'}}
-                        </button>
-                    </th>
-                    <th class="th-top" *ngIf="pointer>=0">
-                        <button type="button" (click)="chartSelected='pie'; setEvaluation(evaluation[pointer])">
-                            {{evaluation[pointer].data | date:'dd/LL/yyyy'}}
-                        </button>
-                    </th>
-                    <th class="th-top" *ngIf="addEval">
-                        <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date" class="data-input">
-                    </th>
-                </tr>
-             </thead>
-             <tbody>
-                <tr>
-                    <th>Pescoço</th>
-                    <td *ngIf="pointer>=1">{{evaluation[pointer-1].pescoco | number: '': locale}}</td>
-                    <td *ngIf="pointer>=0">{{evaluation[pointer].pescoco | number: '': locale}}</td>
-                    <td *ngIf="addEval">
-                        <input class="hidde-arrows" name="pescoco" #pescoco="ngModel" [(ngModel)]="newEvaluation.pescoco" type="number">
-                    </td>
-                </tr>
-                <tr>
-                    <th>Coxa</th>
-                    <td *ngIf="pointer>=1">{{evaluation[pointer-1].coxad | number: '': locale}}</td>
-                    <td *ngIf="pointer>=0">{{evaluation[pointer].coxad | number: '': locale}}</td>
-                    <td *ngIf="addEval">
-                        <input name="coxad" #coxad="ngModel" [(ngModel)]="newEvaluation.coxad"
-                            type="number" step="0.1">
-                    </td>
-                </tr>
-                <tr>
-                    <th><span>Peso</span></th>
-                    <td *ngIf="pointer>=1">{{evaluation[pointer-1].peso | number: '': locale}}</td>
-                    <td *ngIf="pointer>=0">{{evaluation[pointer].peso | number: '': locale}}</td>
-                    <td *ngIf="addEval">
-                        <input class="hidde-arrows" name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso" type="number">
-                    </td>
-                </tr>
+        <h1 class="h1-title" i18n>Mayhew et al. (1983)</h1>
+        <form #f="ngForm" (submit)="save(f.value)">
+            <input type="hidden" name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura">
+            <input type="hidden" name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso">
+            <input type="hidden" name="idade" #idade="ngModel" [(ngModel)]="newEvaluation.idade">
+            <table class="section-table">
+                <thead>
+                    <tr>
+                        <th>&nbsp;</th>
+                        <th class="th-top" *ngIf="pointer>=1">
+                            <button type="button" (click)="chartSelected='pie'; setEvaluation(evaluation[pointer-1])">
+                                {{evaluation[pointer-1].data | date:'dd/LL/yyyy'}}
+                            </button>
+                        </th>
+                        <th class="th-top" *ngIf="pointer>=0">
+                            <button type="button" (click)="chartSelected='pie'; setEvaluation(evaluation[pointer])">
+                                {{evaluation[pointer].data | date:'dd/LL/yyyy'}}
+                            </button>
+                        </th>
+                        <th class="th-top" *ngIf="addEval">
+                            <input name="data" #data="ngModel" [(ngModel)]="newEvaluation.data" type="date"
+                                class="data-input">
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <th>Pescoço</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].pescoco | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].pescoco | number: '': locale}}</td>
+                        <td *ngIf="addEval">
+                            <input class="hidde-arrows" name="pescoco" #pescoco="ngModel"
+                                [(ngModel)]="newEvaluation.pescoco" type="number">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th>Coxa</th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].coxad | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].coxad | number: '': locale}}</td>
+                        <td *ngIf="addEval">
+                            <input name="coxad" #coxad="ngModel" [(ngModel)]="newEvaluation.coxad" type="number"
+                                step="0.1">
+                        </td>
+                    </tr>
+                    <tr>
+                        <th><span>Peso</span></th>
+                        <td *ngIf="pointer>=1">{{evaluation[pointer-1].peso | number: '': locale}}</td>
+                        <td *ngIf="pointer>=0">{{evaluation[pointer].peso | number: '': locale}}</td>
+                        <td *ngIf="addEval">
+                            <input class="hidde-arrows" name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso"
+                                type="number">
+                        </td>
+                    </tr>
                 </tbody>
-         </table>
- 
-         <div class="action">
-             <button type="button" *ngIf="!addEval" [disabled]="pointer<=1" mat-mini-fab color="default"
-                 (click)="pointer=pointer-1">
-                 <mat-icon class="mat-14">chevron_left</mat-icon>
-             </button>
-             <button type="button" *ngIf="!addEval" mat-fab (click)="addEvaluation()">
-                 <mat-icon class="mat-18">add</mat-icon>
-             </button>
-             <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1" mat-mini-fab
-                 color="default" (click)="pointer=pointer+1">
-                 <mat-icon class="mat-14">chevron_right</mat-icon>
-             </button>
-             <button type="button" *ngIf="addEval" mat-fab color="default" (click)="closeInput()">
-                 <mat-icon class="mat-18">close</mat-icon>
-             </button>
-             <button *ngIf="addEval" mat-fab>
-                 <mat-icon class="mat-18">check</mat-icon>
-             </button>
-         </div>
-     </form>
-     <br />
-     <hr />
-     <h4 style="text-align: center; color: blue;">
-         {{selectedEvaluation.data | date:'dd/LL/yyyy'}}
-     </h4>
-     <div *ngIf="showChart">
-         <div style="text-align: center; color: blue;">
-             <div>
-                 <mat-button-toggle-group name="chartSelected" [(ngModel)]="chartSelected">
-                     <mat-button-toggle value="pie">{{selectedEvaluation.data | date:'dd/LL/yyyy'}}
-                     </mat-button-toggle>
-                     <mat-button-toggle value="compare">Comparativo</mat-button-toggle>
-                 </mat-button-toggle-group>
-             </div>
-             <div *ngIf="chartSelected=='pie'">
-                 <mat-label i18n>% Gordura Desejada <small>[{{gorduraDesejada}}]</small> : </mat-label>
-                 <mat-slider min="10" max="30" step="1" thumbLabel="true" [(ngModel)]="gorduraDesejada"
-                     [disabled]="!fatChanged" (change)="getNewEvaluation()">
-                 </mat-slider>
-                 <button mat-mini-fab (click)="fatChanged = !fatChanged" *ngIf="!fatChanged">
-                     <mat-icon>edit</mat-icon>
-                 </button>
-                 <button mat-mini-fab (click)="saveFatChange()" *ngIf="fatChanged">
-                     <mat-icon>save</mat-icon>
-                 </button>
-             </div>
-         </div>
-         <!-- charts -->
-         <div class="chart-pie" *ngIf="chartSelected=='pie'">
-             <app-chart-pie [values]="single"></app-chart-pie>
-             <app-chart-pie [values]="single2"></app-chart-pie>
-         </div>
-         <div *ngIf="chartSelected=='compare'">
-             <app-chart-compare [id]="student.id" [protocolo]="protocolo" [percgd]="gorduraDesejada">
-             </app-chart-compare>
-         </div>
-     </div>
+            </table>
 
- </div>
- 
- <div class="footer">
- <a mat-mini-fab color="primary" (click)="goBack()">
- <mat-icon>undo</mat-icon>
- </a>
- </div>
- </div>
- 
+            <div class="action">
+                <button type="button" *ngIf="!addEval" [disabled]="pointer<=1" mat-mini-fab color="default"
+                    (click)="pointer=pointer-1">
+                    <mat-icon class="mat-14">chevron_left</mat-icon>
+                </button>
+                <button type="button" *ngIf="!addEval" mat-stroked-button (click)="addEvaluation()">
+                    <mat-icon class="mat-18">add</mat-icon>
+                </button>
+                <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1"
+                    mat-mini-fab color="default" (click)="pointer=pointer+1">
+                    <mat-icon class="mat-14">chevron_right</mat-icon>
+                </button>
+                <button type="button" *ngIf="addEval" mat-stroked-button color="default" (click)="closeInput()">
+                    <mat-icon class="mat-18">close</mat-icon>
+                </button>
+                <button *ngIf="addEval" mat-stroked-button>
+                    <mat-icon class="mat-18">check</mat-icon>
+                </button>
+            </div>
+        </form>
+        <br />
+        <hr />
+        <h4 style="text-align: center; color: blue;">
+            {{selectedEvaluation.data | date:'dd/LL/yyyy'}}
+        </h4>
+        <div *ngIf="showChart">
+            <div style="text-align: center; color: blue;">
+                <div>
+                    <mat-button-toggle-group name="chartSelected" [(ngModel)]="chartSelected">
+                        <mat-button-toggle value="pie">{{selectedEvaluation.data | date:'dd/LL/yyyy'}}
+                        </mat-button-toggle>
+                        <mat-button-toggle value="compare">Comparativo</mat-button-toggle>
+                    </mat-button-toggle-group>
+                </div>
+                <div *ngIf="chartSelected=='pie'">
+                    <mat-label i18n>% Gordura Desejada <small>[{{gorduraDesejada}}]</small> : </mat-label>
+                    <mat-slider min="10" max="30" step="1" thumbLabel="true" [(ngModel)]="gorduraDesejada"
+                        [disabled]="!fatChanged" (change)="getNewEvaluation()">
+                    </mat-slider>
+                    <button mat-mini-fab (click)="fatChanged = !fatChanged" *ngIf="!fatChanged">
+                        <mat-icon>edit</mat-icon>
+                    </button>
+                    <button mat-mini-fab (click)="saveFatChange()" *ngIf="fatChanged">
+                        <mat-icon>save</mat-icon>
+                    </button>
+                </div>
+            </div>
+            <!-- charts -->
+            <div class="chart-pie" *ngIf="chartSelected=='pie'">
+                <app-chart-pie [values]="single"></app-chart-pie>
+                <app-chart-pie [values]="single2"></app-chart-pie>
+            </div>
+            <div *ngIf="chartSelected=='compare'">
+                <app-chart-compare [id]="student.id" [protocolo]="protocolo" [percgd]="gorduraDesejada">
+                </app-chart-compare>
+            </div>
+        </div>
 
+    </div>
 
-
-
-
+</div>
