--- a/src/app/avaliation/antropometria/tran-weltman/tran-weltman.component.scss
+++ b/src/app/avaliation/antropometria/tran-weltman/tran-weltman.component.scss
@@ -1,5 +1,32 @@
-.section{
-  flex-direction: column;
-  justify-content: start;
+.container{
+  background-color: white;
+  background-image: unset;
 }
+.section {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+
+  .h1-title{
+    width: 100%;
+    height: 30px;
+    font-size: 20px;
+    margin-top: 10px !important;
+  }
+
+  form{
+    width: 100%;
+  }
+}
+
+
+@media only screen and (min-width: 768px) {
+  form{
+    width: 90% !important;
+    margin: auto;
+  }
+}
+
 
