--- a/src/app/avaliation/componente-postural/componente-postural.component.html
+++ b/src/app/avaliation/componente-postural/componente-postural.component.html
@@ -1,9 +1,8 @@
 <div class="container">
-    <div class="header">
-        <h1 i18n>Avaliação Postural</h1>
-    </div>
+    <app-header-name></app-header-name>
 
     <div class="section">
+        <h1 class="h1-title" i18n>Avaliação Postural</h1>
         <mat-tab-group [disableRipple]="false" [(selectedIndex)]="selectedTab">
 
             <!-- TAB - Vista anterior -->
@@ -502,17 +501,17 @@
                             (click)="pointer=pointer-1">
                             <mat-icon class="mat-14">chevron_left</mat-icon>
                         </button>
-                        <button type="button" *ngIf="!addForm" mat-fab (click)="addDataForm()">
+                        <button type="button" *ngIf="!addForm" mat-stroked-button (click)="addDataForm()">
                             <mat-icon class="mat-18">add</mat-icon>
                         </button>
                         <button type="button" *ngIf="!addForm" [disabled]="pointer == maxPointer-1" mat-mini-fab
                             color="default" (click)="pointer=pointer+1">
                             <mat-icon class="mat-14">chevron_right</mat-icon>
                         </button>
-                        <button type="button" *ngIf="addForm" mat-fab color="default" (click)="closeInputs()">
+                        <button type="button" *ngIf="addForm" mat-stroked-button color="default" (click)="closeInputs()">
                             <mat-icon class="mat-18">close</mat-icon>
                         </button>
-                        <button *ngIf="addForm" mat-fab>
+                        <button *ngIf="addForm" mat-stroked-button>
                             <mat-icon class="mat-18">check</mat-icon>
                         </button>
                     </div>
@@ -870,17 +869,17 @@
                             (click)="pointer=pointer-1">
                             <mat-icon class="mat-14">chevron_left</mat-icon>
                         </button>
-                        <button type="button" *ngIf="!addForm" mat-fab (click)="addDataForm()">
+                        <button type="button" *ngIf="!addForm" mat-stroked-button (click)="addDataForm()">
                             <mat-icon class="mat-18">add</mat-icon>
                         </button>
                         <button type="button" *ngIf="!addForm" [disabled]="pointer == maxPointer-1" mat-mini-fab
                             color="default" (click)="pointer=pointer+1">
                             <mat-icon class="mat-14">chevron_right</mat-icon>
                         </button>
-                        <button type="button" *ngIf="addForm" mat-fab color="default" (click)="closeInputs()">
+                        <button type="button" *ngIf="addForm" mat-stroked-button color="default" (click)="closeInputs()">
                             <mat-icon class="mat-18">close</mat-icon>
                         </button>
-                        <button *ngIf="addForm" mat-fab>
+                        <button *ngIf="addForm" mat-stroked-button>
                             <mat-icon class="mat-18">check</mat-icon>
                         </button>
                     </div>
@@ -1148,7 +1147,7 @@
                                 <th>Graus</th>
                                 <td *ngIf="pointer>=1">{{oldData[pointer-1].vpescolioselombarg | number: '': locale}}</td>
                                 <td *ngIf="pointer>=0">{{oldData[pointer].vpescolioselombarg | number: '': locale}}</td>
-                                <td>
+                                <td *ngIf="addForm">
                                     <input class="hidde-arrows" type="number" name="vpescolioselombarg" #vpescolioselombarg="ngModel"
                                      [(ngModel)]="newData.vpescolioselombarg">
                                 </td>
@@ -1370,17 +1369,17 @@
                             (click)="pointer=pointer-1">
                             <mat-icon class="mat-14">chevron_left</mat-icon>
                         </button>
-                        <button type="button" *ngIf="!addForm" mat-fab (click)="addDataForm()">
+                        <button type="button" *ngIf="!addForm" mat-stroked-button (click)="addDataForm()">
                             <mat-icon class="mat-18">add</mat-icon>
                         </button>
                         <button type="button" *ngIf="!addForm" [disabled]="pointer == maxPointer-1" mat-mini-fab
                             color="default" (click)="pointer=pointer+1">
                             <mat-icon class="mat-14">chevron_right</mat-icon>
                         </button>
-                        <button type="button" *ngIf="addForm" mat-fab color="default" (click)="closeInputs()">
+                        <button type="button" *ngIf="addForm" mat-stroked-button color="default" (click)="closeInputs()">
                             <mat-icon class="mat-18">close</mat-icon>
                         </button>
-                        <button *ngIf="addForm" mat-fab>
+                        <button *ngIf="addForm" mat-stroked-button>
                             <mat-icon class="mat-18">check</mat-icon>
                         </button>
                     </div>
@@ -1488,9 +1487,4 @@
         </mat-tab-group>
     </div>
 
-    <div class="footer">
-        <a mat-mini-fab color="primary" (click)="goBack()">
-            <mat-icon>undo</mat-icon>
-        </a>
-    </div>
 </div>
