--- a/src/app/commun/metronome/metronome.component.scss
+++ b/src/app/commun/metronome/metronome.component.scss
@@ -1,8 +1,23 @@
-
-.section{
+.container {
+    background-color: white;
+    background-image: unset;
+  }
+  .section {
+    width: 100%;
     display: flex;
     flex-direction: column;
-}
+    justify-content: flex-start;
+    align-items: center;
+  
+    .h1-title {
+      width: 100%;
+      height: 30px;
+      font-size: 20px;
+      margin-top: 10px !important;
+    }
+
+  }
+  
 .boxs{
     width: 80%;
     margin: auto;
