--- a/src/app/commun/video/video.component.html
+++ b/src/app/commun/video/video.component.html
@@ -1,18 +1,13 @@
 <div class="container">
-    <div class="header">
-        <h1>VIDEOS</h1>
-    </div>
+    <app-header-name></app-header-name>
 
     <div class="section">
+        <!-- <h1 class="h1-title" i18n>VIDEOS</h1> -->
         <mat-video [autoplay]="true" [preload]="true" [fullscreen]="true" [download]="false" color="accent" spinner="spin">
             <source matVideoSource [src]="selectedVideo" type="video/mp4">
          <!--    <track matVideoTrack src="subtitles_en.vtt" kind="subtitles" srclang="en" label="English">
             <track src="subtitles_no.vtt" kind="subtitles" srclang="no" label="Norwegian"> -->
         </mat-video>
     </div>
-    <div class="footer">
-        <a mat-mini-fab color="primary" (click)="goBack()">
-            <mat-icon>undo</mat-icon>
-        </a>
-    </div>
+
 </div>
